@@ -1,4 +1,5 @@
 1.3.5 - TBD
+    * Added "Move camera here" item in the map context menu
     * Added "follow camera" option to the Map View tab of the main window
     * Added camera field of view indicator in the 2D map
     * Added single color textures option, found under the Options tab in
